WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230793
CSSFontPaletteValuesRule should not be maplike
https://bugs.webkit.org/show_bug.cgi?id=230793
Summary
CSSFontPaletteValuesRule should not be maplike
Myles C. Maxfield
Reported
2021-09-25 03:43:59 PDT
https://github.com/w3c/csswg-drafts/commit/c10855a2c65f51a09697613b977059fae78ff0bc
Attachments
Patch
(16.22 KB, patch)
2021-09-25 13:24 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(16.43 KB, patch)
2021-09-27 23:16 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(15.81 KB, patch)
2021-09-28 02:03 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(16.15 KB, patch)
2021-09-28 14:41 PDT
,
Myles C. Maxfield
wenson_hsieh
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-09-25 03:44:54 PDT
<
rdar://problem/83530242
>
Myles C. Maxfield
Comment 2
2021-09-25 13:24:04 PDT
Created
attachment 439271
[details]
Patch
EWS Watchlist
Comment 3
2021-09-25 13:25:07 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Myles C. Maxfield
Comment 4
2021-09-25 17:36:37 PDT
I think the GTK errors are spurious. It looks like they're not regenerating the derived sources from the .idl change.
Myles C. Maxfield
Comment 5
2021-09-27 23:16:10 PDT
Created
attachment 439436
[details]
Patch
Myles C. Maxfield
Comment 6
2021-09-28 02:03:18 PDT
Created
attachment 439444
[details]
Patch
Myles C. Maxfield
Comment 7
2021-09-28 14:41:10 PDT
Created
attachment 439520
[details]
Patch
Myles C. Maxfield
Comment 8
2021-09-29 08:38:18 PDT
Committed
r283219
(
242261@main
): <
https://commits.webkit.org/242261@main
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug