CSSFontPaletteValuesRule should not be maplike https://bugs.webkit.org/show_bug.cgi?id=230793 <rdar://problem/83530242>

Reviewed by Wenson Hsieh.

LayoutTests/imported/w3c:

The tests are being upstreamed in https://github.com/web-platform-tests/wpt/pull/30966.

* web-platform-tests/css/css-fonts/parsing/font-palette-values-invalid.html:
* web-platform-tests/css/css-fonts/parsing/font-palette-values-valid.html:

Source/WebCore:

The spec changed in
https://github.com/w3c/csswg-drafts/commit/c10855a2c65f51a09697613b977059fae78ff0bc
from "maplike<unsigned long, CSSOMString>" to "attribute CSSOMString overrideColor".

Tests: imported/w3c/web-platform-tests/css/css-fonts/parsing/font-palette-values-invalid.html
       imported/w3c/web-platform-tests/css/css-fonts/parsing/font-palette-values-valid.html

* css/CSSFontPaletteValuesRule.cpp:
(WebCore::CSSFontPaletteValuesRule::basePalette const):
(WebCore::CSSFontPaletteValuesRule::overrideColor const):
(WebCore::CSSFontPaletteValuesRule::cssText const):
(WebCore::CSSFontPaletteValuesRule::initializeMapLike): Deleted.
* css/CSSFontPaletteValuesRule.h:
* css/CSSFontPaletteValuesRule.idl:

Canonical link: https://commits.webkit.org/242261@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283219 268f45cc-cd09-0410-ab3c-d52691b4dbfc