Source/WebCore/css/CSSFontPaletteValuesRule.cpp
@@ -58,22 +58,30 @@ String CSSFontPaletteValuesRule::fontFamily() const
 
 String CSSFontPaletteValuesRule::basePalette() const
 {
-    return WTF::switchOn(m_fontPaletteValuesRule->basePalette(), [&](unsigned index) {
+    return WTF::switchOn(m_fontPaletteValuesRule->basePalette(), [&] (unsigned index) {
         return makeString(index);
-    }, [&](const AtomString& basePalette) -> String {
+    }, [&] (const AtomString& basePalette) -> String {
         if (!basePalette.isNull())
             return basePalette.string();
         return StringImpl::empty();
     });
 }
 
-void CSSFontPaletteValuesRule::initializeMapLike(DOMMapAdapter& map)
-{
-    for (auto& pair : m_fontPaletteValuesRule->overrideColors()) {
-        if (!WTF::holds_alternative<unsigned>(pair.first))
-            continue;
-        map.set<IDLUnsignedLong, IDLUSVString>(WTF::get<unsigned>(pair.first), serializationForCSS(pair.second));
+String CSSFontPaletteValuesRule::overrideColors() const
+{     
+    StringBuilder result;
+    for (size_t i = 0; i < m_fontPaletteValuesRule->overrideColors().size(); ++i) {
+        if (i)
+            result.append(", ");
+        const auto& item = m_fontPaletteValuesRule->overrideColors()[i];
+        WTF::switchOn(item.first, [&] (const AtomString& string) {
+            result.append(serializeString(string));
+        }, [&] (int64_t index) {
+            result.append(index);
+        });
+        result.append(' ', serializationForCSS(item.second));
     }
+    return result.toString();
 }
 
 String CSSFontPaletteValuesRule::cssText() const
@@ -82,9 +90,9 @@ String CSSFontPaletteValuesRule::cssText() const
     builder.append("@font-palette-values ", m_fontPaletteValuesRule->name(), " { ");
     if (!m_fontPaletteValuesRule->fontFamily().isNull())
         builder.append("font-family: ", m_fontPaletteValuesRule->fontFamily(), "; ");
-    WTF::switchOn(m_fontPaletteValuesRule->basePalette(), [&](unsigned index) {
+    WTF::switchOn(m_fontPaletteValuesRule->basePalette(), [&] (unsigned index) {
         builder.append("base-palette: ", index, "; ");
-    }, [&](const AtomString& basePalette) {
+    }, [&] (const AtomString& basePalette) {
         if (!basePalette.isNull())
             builder.append("base-palette: ", serializeString(basePalette.string()), "; ");
     });
@@ -94,9 +102,9 @@ String CSSFontPaletteValuesRule::cssText() const
             if (i)
                 builder.append(',');
             builder.append(' ');
-            WTF::switchOn(m_fontPaletteValuesRule->overrideColors()[i].first, [&](const AtomString& name) {
+            WTF::switchOn(m_fontPaletteValuesRule->overrideColors()[i].first, [&] (const AtomString& name) {
                 builder.append(serializeString(name.string()));
-            }, [&](unsigned index) {
+            }, [&] (unsigned index) {
                 builder.append(index);
             });
             builder.append(' ', serializationForCSS(m_fontPaletteValuesRule->overrideColors()[i].second));
